when I have some more ideas.

The only solution is to remap the keyboard using xmodmaps and mapping for
special characters using the Map Keys dialog.  I do not like this at all and is
a huge hack for linux.  If you do not believe me take a look at the Java Bug
Database for all the problems with this in linux.


Enhancements/Change Log
-----------------------
06/06/2002  Fixed a problem with restore of changed fields after a popup not
            being recognized as being change.  Thanks for the report James

23/5/2002   Added new color schema from Alessandro Casassa named Asso from
            http:\\www.teknosw.it  alessandro.casassa@teknosw.it

20/5/2002   Fixed a problem with code page 280 for italian.

15/5/2002   Cleaned up some error messages on thread interruptions during session
            shutdown.

            Added frame persistance meaning that the frames will be restored to
            the same position and size as when they were closed.

            Fixed a problem on new sessions with the font changing if attributes
            are changed.  This was causing a random font to be used and replacing
            the original font used.  You would then have to go in and reset
            the font.  Not anymore :)

            Added new command line argument for testing of MDI interface instead
            of tabs.
              Command Line Option       Description
               -MDI                     Uses JInternalFrames instead of tabs
                                        to represent the sessions.

13/5/2002   Fixed a problem in screen print.  It will now only print what was on
            the screen at the time of initiating the print dialog.  If the user
            udated the screen the print thread would print what is on the
            current screen instead of what was there when the print was initiated.

09/5/2002   Added support for Highlighted Entry Fields.

08/5/2002   Fixed a problem with the connect dialog not showing up under some